--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -6,6 +6,11 @@
 .product-conatainer{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 40px;
-    padding: 0 80px;
+    gap: 20px;
+    padding-left: 80px;
+}
+
+.cart-container{
+    background-color: greenyellow;
+    border-radius: 16px;
 }
