after click disable choose for me button

--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -38,6 +38,11 @@
 #choose-for-me{
     color: green;
 }
+#choose-for-me:disabled{
+    background-color: #ffffff;
+    cursor: not-allowed;
+    color: #c0c0c0;
+}
 
 @media screen and (max-width: 576px){
     .shop-container{
