--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -10,8 +10,14 @@
     width: 60px;
     height: 60px;
     margin-right: 10px;
-    border-radius: 25%;
+    border-radius: 50%;
 }
-.cart h4{
+.cart h5{
     color: whitesmoke;
+}
+
+.delete-btn{
+    background-color: transparent;
+    border: none;
+    color: white;
 }
