--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -1,6 +1,6 @@
 .product{
     width: 350px;
-    height: 480px;
+    height: 490px;
     border: 1px solid grey;
     border-radius: 5px;
     position: relative;
@@ -10,7 +10,7 @@
 .product img{
     width: 300px;
     height: 300px;
-    margin: 16px;
+    margin: 24px;
     padding: 8px;
     border-radius: 15px;
 }
@@ -32,11 +32,15 @@
     border: none;
     border-radius: 0px 0px 5px 5px;
     display: flex;
-    align-items: center;
     justify-content: center;
     position: absolute;
     bottom: 0;
     cursor: pointer;
+    padding: 7px 0;
+}
+
+.btn-cart p{
+    margin: auto 0;
 }
 
 .btn-cart:hover{
